Dashboard available while logged out

--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -114,6 +114,7 @@
     "tabs": {
       "preferences": "Preferences",
       "account": "Account",
+      "posts": "Posts",
       "comments": "Comments",
       "likes": "Likes"
     },
