--- a/frontend/public/locales/locale-hu.json
+++ b/frontend/public/locales/locale-hu.json
@@ -131,7 +131,8 @@
       "account": "Fiók",
       "comments": "Hozzászólások",
       "likes": "Likok",
-      "preferences": "Preferenciák"
+      "preferences": "Preferenciák",
+      "posts": "Posztok"
     },
     "title": "Műszerfal"
   }
