--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -102,7 +102,8 @@
         }
       },
       "errors": {
-        "commentLength": "Comments can't be longer than 256 characters"
+        "commentRequired": "Comment is required",
+        "commentLength": "Comments can't be longer than 255 characters"
       }
     },
     "continue": "Continue reading"
