Added a button to turn on or off email notifications (currently disabled)

--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -142,6 +142,10 @@
           "dark": "Dark",
           "system": "System"
         }
+      },
+      "notifications": {
+        "title": "Notifications via email",
+        "desc": "Get an email when someone logs in to your account"
       }
     }
   }
