--- a/frontend/public/locales/locale-ro.json
+++ b/frontend/public/locales/locale-ro.json
@@ -24,6 +24,10 @@
           "system": "Sistem"
         },
         "title": "Aspect"
+      },
+      "notifications": {
+        "desc": "Primește un email când cineva intră în contul tău",
+        "title": "Notificări prin email"
       }
     },
     "tabs": {
