--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -116,7 +116,8 @@
   "user": {
     "about": "About me",
     "articles": "Articles",
-    "noArticles": "No articles found"
+    "noArticles": "No articles found",
+    "othersAlert": "This is how others see your page"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -130,7 +131,7 @@
     "preferences": {
       "language": {
         "title": "Language",
-        "desc": "Make it more personal",
+        "desc": "This setting will apply only to the app's language, not the blog's language.",
         "select": "Select a language"
       },
       "theme": {
@@ -147,6 +148,10 @@
         "title": "Notifications via email",
         "desc": "Get an email when someone logs in to your account"
       }
+    },
+    "posts": {
+      "postCount": "Number of posts",
+      "create": "Create post"
     }
   },
   "newStory": {
