Dashboard "Likes" tab finished

--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -152,6 +152,14 @@
     "posts": {
       "postCount": "Number of posts",
       "create": "Create post"
+    },
+    "likes": {
+      "received": "Received likes",
+      "given": "Liked posts",
+      "liked": {
+        "title": "Title",
+        "author": "Author"
+      }
     }
   },
   "newStory": {
