Localization in the comments section of the dashboard

--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -199,6 +199,9 @@
         "new": "New password"
       },
       "username": "Username"
+    },
+    "comments": {
+      "comment": "Comment"
     }
   },
   "newStory": {
