--- a/frontend/public/locales/locale-hu.json
+++ b/frontend/public/locales/locale-hu.json
@@ -197,6 +197,9 @@
       },
       "uploadButton": "Kép feltöltés",
       "username": "Felhasználónév"
+    },
+    "comments": {
+      "comment": "Komment"
     }
   },
   "newStory": {
