--- a/frontend/public/locales/locale-ro.json
+++ b/frontend/public/locales/locale-ro.json
@@ -88,6 +88,9 @@
       },
       "uploadButton": "Încărcare imagine",
       "username": "Nume de utilizator"
+    },
+    "comments": {
+      "comment": "Comentariu"
     }
   },
   "loginPage": {
